--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Build Docker Image
         run: docker build -t harkirat04/dashmesh_web .
       - name: Publish docker image to docker hub
-        run: docker-push harkirat04/dashmesh_web:latest
-        
+        run: docker push harkirat04/dashmesh_web:latest
+
 deploy: 
     needs: build
     runs-on: frontend_ec2    
