--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -9,14 +9,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout source
+      - name: Checkout Source
         uses: actions/checkout@v3
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Build Docker Image
         run: docker build -t harkirat04/dashmesh_web .
-      - name: Publish docker image to docker hub
-        run: docker push harkirat04/dashmesh_web:latest
+      - name: Publish image to docker hub
+        run: docker push harkirat04/dashmesh_web:latest   
 
 deploy: 
     needs: build
