--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -7,24 +7,27 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
+
+    strategy:
+      matrix:
+        node-version: [20.x]
+
     steps:
-      - name: Checkout Source
-        uses: actions/checkout@v3
-      - name: Login to Docker Hub
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build Docker Image
-        run: docker build -t harkirat04/dashmesh_web .
-      - name: Publish image to docker hub
-        run: docker push harkirat04/dashmesh_web:latest   
-        
-  deploy: 
-      needs: build
-      runs-on: frontend_ec2    
-      steps:
-        - name: Pull image from docker hub
-          run: docker pull harkirat04/dashmesh_web:latest 
-        - name: Delete Old Container
-          run: docker rm -f reactContainer
-        - name: Run docker container
-          run: docker run -d -p 3000:80 --name reactContainer harkirat04/dashmesh_web
+      - uses: actions/checkout@v3
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+
+      - run: npm ci
+
+      - run: npm run build --if-present
+
+      - name: Clear contents of /var/www/html
+        run: sudo rm -rf /var/www/html/*
+
+      - name: Copy dist folder to /var/www/html
+        run: sudo cp -r dist/* /var/www/html
