--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,6 +23,11 @@ jobs:
           cache: 'npm'
 
       - run: npm i
+      
+      - run: | 
+          touch .env
+          echo "${{ secrets.PRODUCTION }}" | awk 'BEGIN {RS="\\r?\\n"; ORS="\n"} {print}' > .env
+          cat .env  # Verify content
 
       - run: npm run build --if-present
 
