--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "gh-pages": "^6.3.0",
     "lucide-react": "^0.482.0",
+    "moment-timezone": "^0.5.48",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "^9.6.3",
