--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
+    "recharts": "^2.15.1",
     "redux-persist": "^6.0.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
