--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,38 +1,38 @@
-name: CICD
+# name: CICD
 
-on:
-  push:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main
 
-jobs:
-  build:
-    runs-on: self-hosted
+# jobs:
+#   build:
+#     runs-on: self-hosted
 
-    strategy:
-      matrix:
-        node-version: [20.x]
+#     strategy:
+#       matrix:
+#         node-version: [20.x]
 
-    steps:
-      - uses: actions/checkout@v3
+#     steps:
+#       - uses: actions/checkout@v3
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+#       - name: Use Node.js ${{ matrix.node-version }}
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: ${{ matrix.node-version }}
+#           cache: 'npm'
 
-      - run: npm i --force
+#       - run: npm i --force
       
-      - run: | 
-          touch .env
-          echo "${{ secrets.PRODUCTION }}" | awk 'BEGIN {RS="\\r?\\n"; ORS="\n"} {print}' > .env
-          cat .env  # Verify content
+#       - run: | 
+#           touch .env
+#           echo "${{ secrets.PRODUCTION }}" | awk 'BEGIN {RS="\\r?\\n"; ORS="\n"} {print}' > .env
+#           cat .env  # Verify content
 
-      - run: npm run build --if-present
+#       - run: npm run build --if-present
 
-      - name: Clear contents of /var/www/html
-        run: sudo rm -rf /var/www/html/*
+#       - name: Clear contents of /var/www/html
+#         run: sudo rm -rf /var/www/html/*
 
-      - name: Copy dist folder to /var/www/html
-        run: sudo cp -r dist/* /var/www/html
+#       - name: Copy dist folder to /var/www/html
+#         run: sudo cp -r dist/* /var/www/html
